apps/cal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cal
  labels:
    app.kubernetes.io/name: cal
